--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "library",
     "require": {
         "php": "^7.0",
-        "sancho2804/rest_client": "^1.0.3"
+        "sancho2804/rest_client": "^1.0.5",
+        "ext-json": "*"
     },
     "license": "Apache-2.0",
     "authors": [
@@ -14,6 +15,8 @@
         }
     ],
     "autoload": {
-        "classmap": [""]
+        "psr-4": {
+            "sancho2804\\yandex_disk\\":"src/"
+        }
     }
 }
